# FlagQuizII

./: CMakeLists.txt  FAppMenu.qml  FButton.qml  FErrorMessage.qml  FGameInit.qml  FInformation.qml  FPoints.qml  FSettings.qml  Main.qml  fgame.cpp  fgame.h  fgamesettings.cpp  fgamesettings.h  finitgame.cpp  finitgame.h  images.qrc  main.cpp
android/: AndroidManifest.xml
txt/: description.txt
